--- a/RiceMill.Ui/Pages/RiceThreshing/RiceThreshingListPage.xaml
+++ b/RiceMill.Ui/Pages/RiceThreshing/RiceThreshingListPage.xaml
@@ -128,7 +128,7 @@
 
                     <Label x:Name="LblIsDeliverd"
                            VerticalOptions="Center"
-                           Text="بار تحویل شده است"
+                           Text=""
                            Grid.Row="5" 
                            Grid.Column="1"/>
 
